--- a/ebproof.tex
+++ b/ebproof.tex
@@ -5,9 +5,12 @@
 \title{\package{ebproof} -- proof trees}
 \author{Emmanuel Beffara}
 
+\usepackage{amssymb}
 \usepackage{color}
 \usepackage{fancyvrb}
+\usepackage[a4paper]{geometry}
 \usepackage{hyperref}
+\usepackage{multicol}
 
 \usepackage{ebproof}
 
@@ -20,23 +23,27 @@
 \newcommand\marg[1]{\lit{\{}\meta{#1}\lit{\}}}
 
 \newenvironment{csdoc}[1]{%
-  \begin{flushleft}#1\end{flushleft}%
-  \begin{quote}%
+  \smallbreak\noindent{#1}%
+  \begin{list}{}{%
+    \topsep=1ex%
+%     \leftmargin=\parindent%
+  }%
+  \item
 }{%
-  \end{quote}%
+  \end{list}%
 }
 
 \newenvironment{example}{%
   \VerbatimOut{example.tex}}{%
   \endVerbatimOut
-  \par\noindent Code:
-  \begin{quote}
-    \VerbatimInput{example.tex}
-  \end{quote}
-  Result:
-  \begin{quote}
+  \begin{center}
+  \begin{minipage}{.4\textwidth}
     \input{example.tex}
-  \end{quote}
+  \end{minipage}%
+  \begin{minipage}{.6\textwidth}
+    \VerbatimInput{example.tex}
+  \end{minipage}%
+  \end{center}
 }
 
 \begin{document}
@@ -47,13 +54,32 @@
 \section{Introduction}
 
 The \env{ebproof} package provides commands to typeset proof trees, in the
-style of sequent calculus and related systems.
-The structure is inspired by the
+style of sequent calculus and related systems:
+
+\begin{example}
+\begin{prooftree}
+  \Hypo{ \Gamma, A &\vdash B }
+  \Infer1{ \Gamma &\vdash A\to B }
+  \Hypo{ \Gamma \vdash A }
+  \Infer2{ \Gamma \vdash B }
+\end{prooftree}
+\end{example}
+
+The structure is very much inspired by the
 \href{http://math.ucsd.edu/~sbuss/ResearchWeb/bussproofs/}{\package{bussproofs}}
-package, in particular proofs are built using statements that operate on a
-stack of sub-proofs, in postfix notation.
+package, in particular for the postfix notation.
+I actually wrote \package{ebproof} because there were some limitations in
+\package{bussproofs} that I did not know how to lift, and also because I did
+not like some choices in that package (and also because it was fun to write).
 
 \section{Usage}
+
+Proofs are built using statements that operate on a stack of sub-proofs.
+The main statements \cs{Hypo} and \cs{Infer} (see
+section~\ref{sec:statements}) are used to create proofs and assemble them in
+inference trees.
+Other statements and various options are used to fine-tune the presentation of
+trees.
 
 \subsection{Package loading}
 
@@ -66,6 +92,9 @@ stack of sub-proofs, in postfix notation.
 \end{csdoc}
 
 \subsection{Environments}
+
+The package provides the \env{prooftree} environment, in a standard and
+starred variants.
 
 \begin{csdoc}{
     \cs{begin}\lit{\{prooftree\}}\oarg{options}
@@ -87,40 +116,130 @@ stack of sub-proofs, in postfix notation.
   environment.
 \end{csdoc}
 
+\noindent
+The starred version is used in situations when a single proof will be
+displayed.
+The non-starred version is useful in order to integrate the proof into some
+larger structure, like two parts of a formula:
+
+\begin{example}
+\[
+  \begin{prooftree}
+    \Hypo{ \vdash A }
+    \Hypo{ \vdash B }
+    \Infer1{ \vdash B, C }
+    \Infer2{ \vdash A\wedge B, C }
+  \end{prooftree}
+  \quad \rightsquigarrow \quad
+  \begin{prooftree}
+    \Hypo{ \vdash A }
+    \Hypo{ \vdash B }
+    \Infer2{ \vdash A\wedge B }
+    \Infer1{ \vdash A\wedge B, C }
+  \end{prooftree}
+\]
+\end{example}
+
+% \begin{example}
+% \begin{prooftree}
+%   \Hypo{\strut \Pi_1 }
+%   \Infer[rulestyle=none]1{ A }
+%   \Hypo{ [A] }
+%   \Infer[rulestyle=none]1{ \Pi_2 }
+%   \Infer[rulestyle=none]1{ B }
+%   \Infer1{ A\to B }
+%   \Infer2{ B }
+% \end{prooftree}
+% \end{example}
+
 \subsection{Statements}
 \label{sec:statements}
 
-The basic statements for building proofs are:
+Statements describes proofs in postfix notation: when typesetting a proof tree
+whose last rule has, say, two premisses, you will first write statements for
+the subtree of the first premiss, then statements for the subtree of the
+second premiss, then a statement like \cs{Infer2}\{\meta{conclusion}\} to
+build an inference with these two subtrees as premisses and the given text as
+conclusion.
+
+Hence statements operate on a stack of proof trees.
+At the beginning of a \lit{prooftree} environment, the stack is empty.
+At the end, it must contain exactly one tree, which is the one that will be
+printed.
+
+\subsubsection{Basic statements}
+
+The basic statements for building proofs are the following, where
+\meta{options} stands for arbitrary options as described in
+section~\ref{sec:options}.
 \begin{csdoc}{\cs{Hypo}\oarg{options}\marg{text}}
-  Make a hypothesis, i.e.
-  a leaf in the proof tree, with no line above.
+  Push a new proof tree consisting only in one conclusion line, with no
+  premiss and no line above, in other words a tree with only a leaf
+  (\cs{Hypo} stands for \emph{hypothesis}).
 \end{csdoc}
 \begin{csdoc}{\cs{Infer}\oarg{options}\marg{arity}\oarg{label}\marg{text}}
-  Build an inference step.
+  Build an inference step by taking some proof trees from the top of the
+  stack, assembling them with a rule joining their conclusions and putting a
+  new conclusion below.
   The \meta{arity} is the number of sub-proofs, it may be any number
   including 0 (in this case there will be a line above the conclusion but no
   sub-proof).
   If \meta{label} is present, it is used as the label on the right of the
-  inference line.
-  The \meta{text} is the conclusion of the rule.
-\end{csdoc}
-\begin{csdoc}{\cs{Ellipsis}\marg{label}\marg{text}}
-  Typeset vertical dots, with a label on the right, and a new conclusion.
-  No inference lines are inserted.
+  inference line; it is equivalent to using the \opt{rightlabel} option.
 \end{csdoc}
 
+The \meta{text} in these statements is the contents of the conclusion at the
+root of the tree that the statements create.
+It is typeset in math mode by default but any kind of formatting can be used
+instead, using the \opt{template} option.
+The \meta{label} text is formatted in horizontal text mode by default.
+
+\begin{example}
+\begin{prooftree}[template=(\textbf{#1})]
+  \Hypo{ foo }
+  \Hypo{ bar }
+  \Infer1{ baz }
+  \Infer2{ quux }
+\end{prooftree}
+\end{example}
+
 Each proof tree has a vertical axis, used for alignment of successive steps.
-The position of the axis is deduced from the text of the conclusion in the
-above commands.
-If \meta{text} contains the alignment character \verb|&| then the axis is
-set at that position, otherwise the axis is set at the center of the
-conclusion text.
-For instance, successive statements like \verb|\Infer1{\Gamma&\vdash\Delta}|
-will produce conclusions aligned on the \cs{vdash} symbol.
+The position of the axis is deduced from the text of the conclusion at the
+root of the tree: if \meta{text} contains the alignment character \verb|&|
+then the axis is set at that position, otherwise the axis is set at the center
+of the conclusion text.
+The \cs{Infer} statement makes sure that the axis of the premiss is at the
+same position as the axis of the conclusion.
+If there are several premisses, it places the axis at the center between the
+left of the leftmost conclusion and the right of the rightmost conclusion:
+
+\begin{example}
+\begin{prooftree}
+  \Hypo{ &\vdash A, B, C }
+  \Infer1{ A &\vdash B, C }
+  \Infer1{ A, B &\vdash C }
+  \Hypo{ D &\vdash E }
+  \Infer2{ A, B, D &\vdash C, E }
+  \Infer1{ A, B &\vdash C, D, E }
+  \Infer1{ A &\vdash B, C, D, E }
+\end{prooftree}
+\end{example}
+
+\subsubsection{Additional statements}
 
 The following additional statements may be used to affect the format of the
 last proof tree on the stack:
 
+\begin{csdoc}{\cs{Ellipsis}\marg{label}\marg{text}}
+  Typeset vertical dots, with a label on the right, and a new conclusion.
+  No inference lines are inserted.
+  \begin{example}
+    \begin{prooftree}
+      \Hypo{ \Gamma &\vdash A }
+      \Ellipsis{foo}{ \Gamma &\vdash A, B }
+    \end{prooftree}
+  \end{example}
+\end{csdoc}
 \begin{csdoc}{\cs{Alter}\marg{commands}}
   Modify the proof with arbitrary commands, assuming that these commands do
   not affect the size.
@@ -131,8 +250,7 @@ last proof tree on the stack:
   Put left and right delimiters around the whole sub-proof, without changing
   the alignment (the spacing is affected by the delimiters, however).
   The \meta{left} text must contain an opening occurrence of \cs{left} and the
-  \meta{right} text must contain an occurrence of matching occurrence of
-  \cs{right}.
+  \meta{right} text must contain a matching occurrence of \cs{right}.
   For instance, \verb|\Delims{\left(}{\right)}| will put the
   sub-proof between parentheses.
 \end{csdoc}
@@ -170,7 +288,7 @@ They can be set for a whole tree or a single statement, or even globally using
   \item \opt{dashed}: a dashed line
   \end{itemize}
 \end{csdoc}
-\begin{csdoc}{
+\begin{csdoc}{%
     \opt{leftlabel=}\meta{text} \\
     \opt{rightlabel=}\meta{text}}
   The text to use as the labels of the rules, on the left and on the right
@@ -178,7 +296,7 @@ They can be set for a whole tree or a single statement, or even globally using
   Using the second optional argument in \cs{Infer} is equivalent to setting
   the \env{rightlabel} option with the value of that argument.
 \end{csdoc}
-\begin{csdoc}{
+\begin{csdoc}{%
     \opt{template=}\meta{macro} \\
     \opt{lefttemplate=}\meta{macro} \\
     \opt{righttemplate=}\meta{macro}}
@@ -195,7 +313,7 @@ They can be set for a whole tree or a single statement, or even globally using
   similar, with spacing assuming that a relation symbol is put near the
   alignment mark, so that \verb|\Infer1{A &\vdash B}| is spaced correctly.
 \end{csdoc}
-\begin{csdoc}{
+\begin{csdoc}{%
     \opt{leftlabeltemplate=}\meta{macro} \\
     \opt{rightlabeltemplate=}\meta{macro}}
   These macros are used to typeset the text of labels on the left and right of
